# moni-align

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md  guix.scm
CMakeModules/: AddGitSubmodule.cmake  ConfigureCompilerGcc.cmake  FetchContent_Install.cmake
data/: Chr21.10.ldx  Chr21.10.lidx
data/lifts/: HG00096_H1_21.lft  HG00096_H2_21.lft  HG00097_H1_21.lft  HG00097_H2_21.lft  HG00099_H1_21.lft  HG00099_H2_21.lft  HG00100_H1_21.lft  HG00100_H2_21.lft
data/mouse/reads/: mouse.chr19.R1.fastq  mouse.chr19.R2.fastq
data/mouse/vcf/: mouse_samples.txt
include/: CMakeLists.txt
include/aligner/: align_reads_dispatcher.hpp  aligner_klib.hpp  aligner_ksw2.hpp  aligner_reads_dispatcher.hpp  chain.hpp  liftidx.hpp  mapq.hpp  mems.hpp  moni_lcp.hpp  seed_finder.hpp  statistics.hpp
include/common/: CMakeLists.txt  common.hpp  csv.hpp  debug_logger.hpp  kpbseq.h  sam.hpp  seqidx.hpp  slp_definitions.hpp  stacktrace.hpp
include/extender/: extend_reads_dispatcher.hpp
include/ms/: moni.hpp  ms_pointers.hpp  ms_rle_simple_string.hpp  ms_rle_string.hpp  ms_thr_full.hpp  spumoni.hpp  thresholds_ds.hpp
pipeline/: FindHTSlib.cmake.in  HTSlib.cmake.in  moni  moni.in
src/: CMakeLists.txt  build_liftidx.cpp  build_rle_string.cpp  build_seqidx.cpp  matching_statistics.cpp  mems.cpp  seqidx2liftidx.cpp
src/align/: CMakeLists.txt  align_full_ksw2.cpp  rlebwt_ms_full_build.cpp
src/extend/: CMakeLists.txt
src/spumoni/: CMakeLists.txt  build_spumoni.cpp  run_spumoni.cpp
test/src/: CMakeLists.txt  align.cpp  align_full_klib.cpp  align_full_ksw2.cpp  align_klib.cpp  align_klib_omp.cpp  align_ksw2.cpp  align_ksw2_omp.cpp  align_omp.cpp  align_omp_mems.cpp  backward_test.cpp  chain_test.cpp  compress_dictionary.cpp  ldx_slp_test.cpp  liftidx_test.cpp  lifting_test.cpp  matching_statistics.cpp  matching_statistics_stats.cpp  mems_test.cpp  ms_full_stats.cpp  ms_full_test.cpp  ms_stats.cpp  r-index_test.cpp  rle_string_test.cpp  rlebwt_ms_build.cpp  rlebwt_ms_full_build.cpp  shapedslp_test.cpp  sigsegv_bt_handler_test.cpp  thr_stats.cpp  thr_test.cpp
utils/: CMakeLists.txt  blast-like-visualizer.cpp  extract.cpp  ksw_ksw2_global.cpp  random_access.cpp
workaround/: WORKAROUND.md  dummy_vcf.py
